--- a/packet-peak.glade
+++ b/packet-peak.glade
@@ -93,6 +93,7 @@
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
             <property name="use_action_appearance">False</property>
+            <signal name="clicked" handler="confirm" swapped="no"/>
           </object>
           <packing>
             <property name="x">148</property>
@@ -108,6 +109,7 @@
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
             <property name="use_action_appearance">False</property>
+            <signal name="clicked" handler="confirm" swapped="no"/>
           </object>
           <packing>
             <property name="x">144</property>
