--- a/apt-peak.glade
+++ b/apt-peak.glade
@@ -37,11 +37,11 @@
     <property name="can_focus">False</property>
     <property name="stock">gtk-delete</property>
   </object>
-  <object class="GtkWindow" id="xpacket_peak">
+  <object class="GtkWindow" id="gapt_peak">
     <property name="width_request">1000</property>
     <property name="height_request">560</property>
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">Packet-peak</property>
+    <property name="title" translatable="yes">Apt-peak</property>
     <property name="window_position">center</property>
     <property name="default_width">1000</property>
     <property name="default_height">560</property>
