--- a/apt-peak.glade
+++ b/apt-peak.glade
@@ -62,6 +62,7 @@
                         <property name="can_focus">True</property>
                         <property name="model">confirmed_liststore</property>
                         <property name="search_column">0</property>
+                        <signal name="cursor-changed" handler="set_description" swapped="no"/>
                         <child>
                           <object class="GtkTreeViewColumn" id="packcol">
                             <property name="title" translatable="yes">Package</property>
@@ -172,6 +173,7 @@
                         <property name="can_focus">True</property>
                         <property name="model">peak_liststore</property>
                         <property name="search_column">0</property>
+                        <signal name="cursor-changed" handler="set_description" swapped="no"/>
                         <child>
                           <object class="GtkTreeViewColumn" id="packcol1">
                             <property name="title" translatable="yes">Package</property>
@@ -284,6 +286,7 @@
                         <property name="can_focus">True</property>
                         <property name="model">removable_liststore</property>
                         <property name="search_column">0</property>
+                        <signal name="cursor-changed" handler="set_description" swapped="no"/>
                         <child>
                           <object class="GtkTreeViewColumn" id="packcol2">
                             <property name="title" translatable="yes">Package</property>
@@ -408,8 +411,10 @@
             <property name="height_request">20</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="xalign">0.029999999329447746</property>
-            <property name="label" translatable="yes">Short description</property>
+            <property name="single_line_mode">True</property>
+            <attributes>
+              <attribute name="background" value="#b122ffffa40f"/>
+            </attributes>
           </object>
           <packing>
             <property name="expand">False</property>
